@@ -1,3 +1,9 @@
+2006-09-11  Thomas Moschny  <thomas.moschny@gmx.de>
+
+	* cmd_diff_log.cc (CMD(log)): Now using the markings to avoid
+	fetching rosters for uninteresting revisions. Needs some testing
+	though.
+
 2006-09-10  Thomas Moschny  <thomas.moschny@gmx.de>
 
 	* cmd_diff_log.cc (CMD(log)): Traverse the tree in topological
